<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/studying_mode_restriction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/behave_yourself" >

    <Button
        android:id="@+id/deny_studying_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/study_to_main_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_main" />
        
        <Button
            android:id="@+id/dial_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dial" />
        
        <Button
            android:id="@+id/sms_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms" />
    </LinearLayout>

</RelativeLayout>