<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_activity_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/message_list_view_bg" >

        <RelativeLayout
            android:id="@+id/layout_1"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_bg" >

            <TextView
                android:id="@+id/r_tv"
                style="@style/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/setting" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_1"
            android:layout_marginTop="10dip"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <RelativeLayout
                android:id="@+id/relative_layout_times"
                android:layout_width="match_parent"
                android:layout_height="227dp" >

                <RelativeLayout
                    android:id="@+id/RelativeLayout01"
                    android:layout_width="wrap_content"
                    android:layout_height="55dip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/relative_layout_time_iterm"
                    android:background="@drawable/normal_button"
                    android:gravity="top"
                    android:paddingLeft="10dip"
                    android:paddingTop="15dip" >

                    <CheckBox
                        android:id="@+id/night_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/force_sleep" />

                    <TextView
                        android:id="@+id/night_tv"
                        style="@style/iTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/night_cb"
                        android:layout_alignBottom="@+id/night_cb"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:textIsSelectable="false"
                        android:textSize="15sp"
                        android:width="150dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout_time_iterm"
                    android:layout_width="wrap_content"
                    android:layout_height="55dip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/normal_button"
                    android:gravity="top"
                    android:paddingLeft="10dip"
                    android:paddingTop="15dip" >

                    <CheckBox
                        android:id="@+id/noon_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/force_noon_sleep" />

                    <TextView
                        android:id="@+id/noon_tv"
                        style="@style/iTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/noon_cb"
                        android:layout_alignBottom="@+id/noon_cb"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:textIsSelectable="false"
                        android:textSize="15sp"
                        android:width="150dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout02"
                    android:layout_width="wrap_content"
                    android:layout_height="55dip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/RelativeLayout01"
                    android:background="@drawable/normal_button"
                    android:gravity="top"
                    android:paddingLeft="10dip"
                    android:paddingTop="15dip" >

                    <CheckBox
                        android:id="@+id/study_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/force_study" />

                    <TextView
                        android:id="@+id/study_tv"
                        style="@style/iTextView"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/study_cb"
                        android:layout_alignBottom="@+id/study_cb"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="20dp"
                        android:textIsSelectable="false"
                        android:textSize="15sp"
                        android:width="100dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout03"
                    android:layout_width="wrap_content"
                    android:layout_height="55dip"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/normal_button"
                    android:paddingLeft="10dip"
                    android:paddingTop="15dip" >

                    <TextView
                        android:id="@+id/to_whom_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:text="@string/to_whom"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/phone_tv"
                        style="@style/iTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:autoLink="none"
                        android:textIsSelectable="false"
                        android:width="150dp" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/setting_ok_b"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="34dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button"
            android:minWidth="80dip"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/confirm"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/log_out_b"
            android:layout_width="110dp"
            android:layout_height="40dip"
            android:layout_alignLeft="@+id/send_status_b"
            android:layout_below="@+id/send_status_b"
            android:layout_marginTop="17dp"
            android:background="@drawable/button"
            android:minWidth="80dip"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/logout"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/send_status_b"
            android:layout_width="110dp"
            android:layout_height="40dip"
            android:layout_alignBaseline="@+id/screen_settings_b"
            android:layout_alignBottom="@+id/screen_settings_b"
            android:layout_toLeftOf="@+id/setting_ok_b"
            android:background="@drawable/button"
            android:minWidth="80dip"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/send_status"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/screen_settings_b"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_below="@+id/scrollView_time"
            android:layout_marginTop="26dp"
            android:layout_alignRight="@+id/setting_ok_b"
            android:layout_marginRight="22dp"
            android:background="@drawable/button"
            android:minWidth="80dip"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/screen_helper"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>